Po analizie plików